feat(velocity): parameterize window — GET /sales-velocity?days=N
EventVelocityService.windowEndingToday(p, eventId, days) computes the
histogram for any 1..MAX_WINDOW_DAYS (365) window. Old last7Days() is kept
as a back-compat shim. Controller accepts ?days=N query param; defaults
to 7 if absent. Window is clamped to [1, 365] inside the service.

3 new tests: custom 30-day window, clamping over max, clamping at zero.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>